--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Josefin+Sans"
       rel="stylesheet"
     />
+    <script src="https://use.fontawesome.com/2a1283cb02.js"></script>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
